# snappi

./: .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  README.md  dev-requirements.txt  do.py  generate.py  grpc-requirements.txt  minimum-requirements.txt  pyproject.toml  readme.md  requirements.txt  setup.py  version.py
docs/: GENERATORRULES.md  e2e_port_flow_config.py  extensions.md  open_traffic_generator_config.py  snappi_config.py  snappi_in_brief.py
gosnappi/: action_port.go  action_port_reboot.go  action_port_reset.go  action_protocol.go  action_protocol_bgp.go  action_protocol_bgp_graceful_restart_notification.go  action_protocol_bgp_initiate_graceful_restart.go  action_protocol_bgp_notification.go  action_protocol_ipv4.go  action_protocol_ipv4_ping.go  action_protocol_ipv4_ping_request.go  action_protocol_ipv6.go  action_protocol_ipv6_ping.go  action_protocol_ipv6_ping_request.go  action_protocol_isis.go  action_protocol_isis_initiate_graceful_restart.go  action_protocol_isis_initiate_graceful_start.go  action_protocol_isis_initiate_restart.go  action_protocol_isis_overload_bit.go  action_protocol_isis_planned_restart.go  action_protocol_isis_srv6.go  action_protocol_isis_srv6_my_local_sid.go  action_protocol_isis_srv6_my_local_sid_add.go  action_protocol_isis_srv6_my_local_sid_delete.go  action_protocol_isis_srv6_my_local_sid_entry.go  action_protocol_isis_srv6_my_local_sid_modify.go  action_protocol_isis_srv6_my_local_sid_sid_ref.go  action_protocol_isis_unplanned_restart.go  action_response.go  action_response_protocol.go  action_response_protocol_ipv4.go  action_response_protocol_ipv4_ping.go  action_response_protocol_ipv4_ping_response.go  action_response_protocol_ipv6.go  action_response_protocol_ipv6_ping.go  action_response_protocol_ipv6_ping_response.go  append_config_response.go  bgp_add_path.go  bgp_advanced.go  bgp_as_path.go  (+1895 more)
logo/: logo_color.ai  logo_color.eps
src/: api.py  (+92 more)
(+111 files in other folders)
