[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Package identity
name = "snappi"
dynamic = ["version", "dependencies"]

# Metadata
description = "The Snappi Open Traffic Generator Python Package"
readme = "readme.md"
requires-python = ">=3.7,<4"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Keysight Technologies", email = "andy.balogh@keysight.com" }
]
keywords = ["snappi", "testing", "open traffic generator", "automation"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing :: Traffic Generation",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[tool.setuptools]
packages    = ["snappi"]
include-package-data = true

# Dynamic fields (populated from code/files)
[tool.setuptools.dynamic]
version      = { file = "version.txt" }
dependencies = { file = "requirements.txt" }

[project.optional-dependencies]
ixnetwork = ["snappi_ixnetwork == 1.34.0"]
trex      = ["snappi_trex"]
testing   = ["pytest", "flask"]
telemetry = [
  "opentelemetry-api == 1.17.0 ; python_version >= '3.7'",
  "opentelemetry-sdk        ; python_version >= '3.7'",
  "opentelemetry-exporter-otlp-proto-http ; python_version >= '3.7'",
  "opentelemetry-exporter-otlp-proto-grpc ; python_version >= '3.7'",
  "opentelemetry-instrumentation-grpc    ; python_version >= '3.7'",
  "opentelemetry-instrumentation-requests; python_version >= '3.7'"
]

[project.urls]
Repository = "https://github.com/open-traffic-generator/snappi"
